# alicesystems

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alice_device_documentation.md  alice_master_document.md  alice_technical_specification.md
apps/hub-api/: .env.example  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/hub-api/alembic/: README.md  env.py
apps/hub-api/alembic/versions/: 20260323_0001_initial_canonical_schema.py  20260323_0002_add_system_settings.py  20260324_0002_provisioning_schema.py
apps/hub-api/app/: __init__.py  main.py
apps/hub-api/app/api/: deps.py  router.py
apps/hub-api/app/core/: config.py  db.py  events.py  logging.py  mqtt.py  security.py
apps/hub-api/app/domain/: audit_event.py  device.py  device_bootstrap_record.py  device_credential.py  entity.py  entity_state.py  models.py  provisioning_session.py  room.py  site.py  system_setting.py  user.py
apps/hub-api/app/repositories/: audit_event_repository.py  device_bootstrap_repository.py  device_credential_repository.py  device_repository.py  entity_repository.py  entity_state_repository.py  provisioning_session_repository.py  room_repository.py  site_repository.py  system_setting_repository.py  user_repository.py
apps/hub-api/app/schemas/: audit.py  auth.py  devices.py  entities.py  provisioning.py  rooms.py  system.py
apps/hub-api/app/scripts/: __init__.py  seed_bootstrap_records.py  seed_dev.py  (+2 more)
apps/hub-api/scripts/: README.md  dev-console.ps1  reset-dev.ps1  run-api.ps1  seed-dev.ps1  sync-admin.ps1
(+255 files in other folders)
